--- a/travis.yml
+++ b/travis.yml
@@ -2,15 +2,30 @@ language: python
 
 #cache: pip
 #
-#python:
-#  - 3.5
+python:
+#  - "2.6"
+#  - "2.7"
+#  - "3.2"
+#  - "3.3"
+#  - "3.4"
+  - "3.5"
+#  - "3.5-dev" # 3.5 development branch
+#  - "3.6"
+#  - "3.6-dev" # 3.6 development branch
+#  - "3.7-dev" # 3.7 development branch
+#  - "nightly" # currently points to 3.7-dev
 #
-#install:
+# command to install dependencies
+install:
 #  - pip install codecov
-#
-#script:
+#  - "pip install -r requirements.txt"
+  - "pip install ."
+
+# command to run tests
+script:
+  - pytest
 #  - coverage run tests.py
-#
+
 #after_success:
 #  - codecov
 #
