--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@ python:
 #  - "nightly" # currently points to 3.7-dev
 #
 # command to install dependencies
-install:
-#  - pip install codecov
-#  - "pip install -r requirements.txt"
-  - "pip install ."
-
-# command to run tests
-script:
-  - pytest
+#install:
+##  - pip install codecov
+##  - "pip install -r requirements.txt"
+#  - "pip install ."
+#
+## command to run tests
+#script:
+#  - pytest
 #  - coverage run tests.py
 
 #after_success:
