--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,9 @@ python:
 #
 # command to install dependencies
 install:
+  - pip install -r setup-requirements.txt
   - pip install .
-#  - pip install -r requirements.txt
+
 #  - pip install codecov
 #
 #
