--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ python:
 #
 # command to install dependencies
 install:
-  - pip install -r setup-requirements.txt
+  - pip install --user -r setup-requirements.txt
   - pip install .
 
 #  - pip install codecov
