--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ python:
 #  - "pypy3" # Pypy3 2.4.0
 #  - "pypy-5.3.1"
 #
+
+before_install:
+  - sudo apt-get install pandoc
+
 # command to install dependencies
 install:
   - pip install -r setup-requirements.txt
