--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
 #
 ## command to run tests
 script:
-  - pytest
+  - pytest -v
 #  - coverage run tests.py
 #  - py.test --cov-report term-missing --cov app -v
 #
