--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ before_install:
 
 # command to install dependencies
 install:
-  - pip install -r setup-requirements.txt
-  - pip install .
+  - pip install -r requirements-setup.txt -r requirements-test.txt .
+#  - pip install .
 
 #  - pip install codecov
 #
