* trying to make the coverage work * fixed setup.cfg for correct pytest integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 
 script:
 #  - coverage run tests.py
-  - pytest --cov-report term-missing --cov=./pyoad -vv pyoad/tests/
+  - pytest --cov-report term-missing --cov=./pyoad -v pyoad/tests/
 
 after_success:
   - codecov
