--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,12 @@ description-file = README.md
 
 # In order to be able to execute 'python setup.py test'
 # from https://docs.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner
+#
+# However for some reason this hangs at the first test currently...
+#
 [aliases]
 test=pytest
 
 [tool:pytest]
-#addopts = --verbose
-#python_files = testing/*/*.py
+addopts = --verbose
+testpaths = pyoad/tests
