--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,8 @@ after_success:
 # - coveralls is an alternative to codecov
 # ***documentation***
   - mkdocs build
+  # grant the possibility to push on github pages
+  - openssl aes-256-cbc -K $encrypted_c8a0de9e8119_key -iv $encrypted_c8a0de9e8119_iv -in github_travis_rsa.enc -out github_travis_rsa -d
   - mkdocs gh-deploy
 
 #matrix:
