--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,6 @@ python:
 #
 
 before_install:
-  # grant the possibility to push on github pages
-  - openssl aes-256-cbc -K $encrypted_3c13b9d66aac_key -iv $encrypted_3c13b9d66aac_iv -in github_travis_rsa.enc -out github_travis_rsa -d
   - sudo apt-get install pandoc
 
 install:
@@ -43,6 +41,9 @@ after_success:
 # - coveralls is an alternative to codecov
 # ***documentation***
   - mkdocs build
+  # grant the possibility to push on the repo
+  - openssl aes-256-cbc -K $encrypted_3c13b9d66aac_key -iv $encrypted_3c13b9d66aac_iv -in github_travis_rsa.enc -out github_travis_rsa -d
+  - ssh-add github_travis_rsa
   - mkdocs gh-deploy -v
 
 #matrix:
