--- a/.travis.yml
+++ b/.travis.yml
@@ -40,12 +40,12 @@ install:
 
 script:
 #  - coverage run tests.py
-  - pytest --cov-report term-missing  --junitxml=junit.xml --cov=./pyoad -v pyoad/tests/
+  - pytest --junitxml=reports/junit/junit.xml --html=reports/junit/report.html --cov-report term-missing --cov=./pyoad -v pyoad/tests/
 
 after_success:
 # ***reporting***
 #  - junit2html junit.xml testrun.html  output is really not nice
-  - ant -f ci_tools/generate-junit-html.xml  # generates the html for the test results
+  - ant -f ci_tools/generate-junit-html.xml  # generates the html for the test results. Actually we dont use it anymore
   - python ci_tools/generate-junit-badge.py  # generates the badge for the test results
   - codecov
   - pylint pyoad  # note that at the moment the report is simply lost, we dont transform the result into anything
@@ -65,7 +65,7 @@ after_success:
   # push but only if this is not a build triggered by a pull request
   # note: here we use the --dirty flag so that mkdocs does not clean the additional reports that we copied in the site
   # only push for 3.5 to avoid confusion
-  - if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; PYTHONPATH=pyoad/ mkdocs gh-deploy -v --dirty -f ci_tools/mkdocs.yml --remote-name gh-remote; git push gh-remote gh-pages; fi;
+  - if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; PYTHONPATH=autoclass/ mkdocs gh-deploy -v --dirty -f ci_tools/mkdocs.yml --remote-name gh-remote; git push gh-remote gh-pages; fi;
 #  - if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; git push gh-remote gh-pages; fi;
 
 deploy:
