--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ after_success:
   - mv reports/junit site/
   # mkdocs gh-deploy requires special care :
   # ---grant the possibility to push on the repo---
+  - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then exit 0; fi;
   - openssl aes-256-cbc -K $encrypted_60e2bdb32373_key -iv $encrypted_60e2bdb32373_iv -in ci_tools/github_travis_rsa_pyoad.enc -out ci_tools/github_travis_rsa_pyoad -d
   - chmod 600 ci_tools/github_travis_rsa_pyoad
   - eval `ssh-agent -s`  # launch the authentication agent
@@ -66,7 +67,7 @@ after_success:
   # push but only if this is not a build triggered by a pull request
   # note: here we use the --dirty flag so that mkdocs does not clean the additional reports that we copied in the site
   # only push for 3.5 to avoid confusion
-  - if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; PYTHONPATH=autoclass/ mkdocs gh-deploy -v --dirty -f docs/mkdocs.yml --remote-name gh-remote; git push gh-remote gh-pages; fi;
+  - if [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; PYTHONPATH=autoclass/ mkdocs gh-deploy -v --dirty -f docs/mkdocs.yml --remote-name gh-remote; git push gh-remote gh-pages; fi;
 #  - if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; git push gh-remote gh-pages; fi;
 
 deploy:
