--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,9 +1,13 @@
-site_name: python-object-as-daemon
+site_name: python-spawner
 # site_description: 'A short description of my project'
-repo_url: https://github.com/smarie/python-object-as-daemon
-pages:
+repo_url: https://github.com/smarie/python-spawner
+docs_dir: .
+site_dir: ../site
+nav:
     - Home: index.md
+    # - API reference: api_reference.md
     - Changelog: changelog.md
+
 theme: material  # readthedocs  mkdocs
 
 markdown_extensions:
