--- a/ci_tools/requirements-pip.txt
+++ b/ci_tools/requirements-pip.txt
@@ -7,7 +7,7 @@ setuptools_scm
 pytest  #$PYTEST_VERSION
 pytest-logging  # ==2015.11.4
 psutil
-future  # so that package 'builtins' is available for test test_mini_instance_def_primitives
+future  # so that in python 2 package 'builtins' is available for test test_mini_instance_def_primitives
 
 # --- to generate the reports (see scripts in ci_tools, called by .travis)
 pytest-cov==2.6.0  # after 2.6.1 it requires pytest 3.6
