--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
 
 env:
   global:
-  - GH_REF: git@github.com:smarie/python-spawner.git
+  - GH_REF: git@github.com:smarie/python-spawny.git
 
 before_install:
   # (a) linux dependencies
@@ -34,10 +34,10 @@ install:
 script:
 #  - coverage run tests.py
   - pip install .
-  - python -c "import os; os.chdir('..'); import spawner"
+  - python -c "import os; os.chdir('..'); import spawny"
 # ***tests***
 #  - coverage run tests.py
-#  - pytest --junitxml=reports/junit/junit.xml --html=reports/junit/report.html --cov-report term-missing --cov=./spawner -v spawner/tests/
+#  - pytest --junitxml=reports/junit/junit.xml --html=reports/junit/report.html --cov-report term-missing --cov=./spawny -v spawny/tests/
 # now done in a dedicated script to capture exit code 1 and transform it to 0
   - chmod a+x ./ci_tools/run_tests.sh
   - sh ./ci_tools/run_tests.sh
@@ -48,13 +48,13 @@ after_success:
 #  - junit2html junit.xml testrun.html  output is really not nice
   - ant -f ci_tools/generate-junit-html.xml  # generates the html for the test results. Actually we dont use it anymore
   - codecov
- # - pylint spawner  # note that at the moment the report is simply lost, we dont transform the result into anything
+ # - pylint spawny  # note that at the moment the report is simply lost, we dont transform the result into anything
 # ***documentation***
   - mkdocs build -f docs/mkdocs.yml
   - mv reports/junit site/
   # mkdocs gh-deploy requires special care :
   # ---grant the possibility to push on the repo---
-  - openssl aes-256-cbc -K $encrypted_60e2bdb32373_key -iv $encrypted_60e2bdb32373_iv -in ci_tools/github_travis_rsa_spawner.enc -out ci_tools/github_travis_rsa_spawner -d
+  - openssl aes-256-cbc -K $encrypted_60e2bdb32373_key -iv $encrypted_60e2bdb32373_iv -in ci_tools/github_travis_rsa_spawny.enc -out ci_tools/github_travis_rsa_spawny -d
   # If the output file does not exist, that is because the secret is invalid. This can happen in forked repos so do not fail the build
   - |
     if [ -s "ci_tools/github_travis_rsa" ]; then
@@ -67,12 +67,12 @@ after_success:
       git fetch gh-remote && git fetch gh-remote gh-pages:gh-pages;  # make sure we have the latest gh-remote
       # push but only if this is not a build triggered by a pull request
       # note: here we use the --dirty flag so that mkdocs does not clean the additional reports that we copied in the site
-      if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; PYTHONPATH=spawner/ mkdocs gh-deploy -v --dirty -f docs/mkdocs.yml --remote-name gh-remote; git push gh-remote gh-pages; fi;
+      if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then echo "Pushing to github"; PYTHONPATH=spawny/ mkdocs gh-deploy -v --dirty -f docs/mkdocs.yml --remote-name gh-remote; git push gh-remote gh-pages; fi;
     else
       echo "File 'ci_tools/github_travis_rsa' has not been created, please check your encrypted repo token in .travis.yml, on the line starting with 'openssl aes-256-cbc...'"
     fi
   # -- create the _version.py file
-  - python ci_tools/write_version.py ./spawner
+  - python ci_tools/write_version.py ./spawny
 
 deploy:
   # Deploy on PyPI on tags
@@ -89,7 +89,7 @@ deploy:
 
   # Create a github release on tags
   - provider: script
-    script: python ci_tools/github_release.py -s $GITHUB_TOKEN --repo-slug smarie/python-spawner -cf ./docs/changelog.md -d https://smarie.github.io/python-spawner/changelog/ $TRAVIS_TAG
+    script: python ci_tools/github_release.py -s $GITHUB_TOKEN --repo-slug smarie/python-spawny -cf ./docs/changelog.md -d https://smarie.github.io/python-spawny/changelog/ $TRAVIS_TAG
     skip_cleanup: true
     on:
       tags: true
