--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: python-spawner
+site_name: python-spawny
 # site_description: 'A short description of my project'
-repo_url: https://github.com/smarie/python-spawner
+repo_url: https://github.com/smarie/python-spawny
 docs_dir: .
 site_dir: ../site
 nav:
