--- a/ci_tools/requirements-pip.txt
+++ b/ci_tools/requirements-pip.txt
@@ -10,8 +10,8 @@ psutil
 future  # so that in python 2 package 'builtins' is available for test test_mini_instance_def_primitives
 
 # --- to generate the reports (see scripts in ci_tools, called by .travis)
-pytest-cov==2.6.0  # after 2.6.1 it requires pytest 3.6
-pytest-html  #$PYTEST_HTML_VERSION
+# pytest-cov==2.6.0  # after 2.6.1 it requires pytest 3.6
+pytest-html==1.9.0  # otherwise requires pytest 5
 xunitparser
 
 # --- to generate the doc (see .travis)
