--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ env:
 
 before_install:
   # (a) linux dependencies
-  - sudo apt-get install pandoc
   - sudo apt-get install ant
   - sudo apt-get install ant-optional  # for junitreports
 
@@ -26,6 +25,8 @@ install:
   - pip list
   - pip install setuptools_scm  # apparently python 2 does not support that it is installed simultaneously with pytest-cases
   - python ci_tools/py_install.py pip ci_tools/requirements-pip.txt
+  # this does not work anymore on python 2 so lets only do it when needed
+  - if [ "${TRAVIS_PYTHON_VERSION}" = "3.5" ]; then pip install mkdocs-material mkdocs; fi;
   # travis-specific installs
   - pip install PyGithub  # for ci_tools/github_release.py
   - pip install codecov  # See https://github.com/codecov/example-python.
@@ -72,7 +73,7 @@ after_success:
       echo "File 'ci_tools/github_travis_rsa' has not been created, please check your encrypted repo token in .travis.yml, on the line starting with 'openssl aes-256-cbc...'"
     fi
   # -- create the _version.py file
-  - python ci_tools/write_version.py ./spawny
+  # - python ci_tools/write_version.py ./spawny
 
 deploy:
   # Deploy on PyPI on tags
